--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ practise/
 .gitignore/
 desktop.ini/
 .temp/
-C:/Users/2019u/Desktop/cpp_projects/a.txt/
-C:/Users/2019u/Desktop/cpp_projects/sample.txt/
+a.txt/
+sample.txt/
